--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -112,7 +112,7 @@ ul, li {
   font-size: 10px;
   line-height: 13px;
   color: #fff;
-  padding: 3px 20px 0px 20px;
+  padding: 5px 20px 2px 20px;
   text-transform: uppercase;
   margin-right: 10px;
   white-space: wrap;
